--- a/static/index.html
+++ b/static/index.html
@@ -424,6 +424,14 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
             </div>
         </div>
 
+        <div class="popupContent" id="error-popup">
+            <h3 class="header mb-2"><span><i class="fas fa-exclamation-triangle"></i></span> Error loading data</h3>
+            <p class="mt-3">The search settings were changed. To see the updated results, please press the <span style="color: #6449D6; font-weight: 600;">magnifying glass</span> icon.<p>
+            <div class="d-flex align-items-center justify-content-end mt-3">
+                <button type="button" id="okay-button" class="btn">OK</button>
+            </div>
+        </div>
+
         <div id="app-footer">
             2024 &copy; SigLens
         </div>
