--- a/static/metric-summary.html
+++ b/static/metric-summary.html
@@ -54,9 +54,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
             <!-- Add your sidebar content here -->
         </div>
 
-        <div class="summary" style="height:100vh;width: 100vw;">
+        <div class="summary" style="height:100vh;width: 100vw;padding:20px">
             <div style="display: flex; align-items: center;" class="head">
-                <h5 style="margin-right: 10px;">
+                <h5 style="margin-right: 10px;font-size:18px">
                     All metrics reporting across your infrastructure in the past
                 </h5>
                 <div class="dropdown">
@@ -112,13 +112,13 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
             </div>
             <div class="searchcontainer" style="display:flex;flex-direction:row;flex-wrap: wrap;
   justify-content: flex-start;gap:5px;margin-top:1%;margin-bottom:0.5%">
-                <div class="search1" style="width:25%">
+                <div class="search1">
                     <input type="text" class="form-control search-db-input" placeholder="Search Metric Name"
                         title="Search your dashboards" id="metric">
                 </div>
             </div>
             
-            <div class="mt-3 h-100 mb-2" id="tracing-container" style="margin:2.5%;">
+            <div class="mt-3 h-100 mb-2" id="tracing-container">
                 <div id="ag-grid" class="ag-theme-mycustomtheme">
                 </div>
             </div>
